// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableSection should render 1`] = `
<Provider app={{...}}>
  <MuiThemeProvider theme={{...}}>
    <WithStyles(WithTheme(inject-ExpandableSection)) title="Title">
      <WithTheme(inject-ExpandableSection) classes={{...}} title="Title">
        <inject-ExpandableSection theme={{...}} classes={{...}} title="Title">
          <ExpandableSection theme={{...}} classes={{...}} title="Title" amp={false}>
            <WithStyles(ExpansionPanel) classes={{...}} expanded={[undefined]} onChange={[Function]}>
              <ExpansionPanel classes={{...}} expanded={[undefined]} onChange={[Function]} defaultExpanded={false} disabled={false}>
                <WithStyles(Paper) className="MuiExpansionPanel-root-10 RSFExpandableSection-root-1" elevation={1} square={true}>
                  <Paper classes={{...}} className="MuiExpansionPanel-root-10 RSFExpandableSection-root-1" elevation={1} square={true} component="div">
                    <div className="MuiPaper-root-13 MuiPaper-elevation1-16 MuiExpansionPanel-root-10 RSFExpandableSection-root-1">
                      <WithStyles(ExpansionPanelSummary) expandIcon={{...}} classes={{...}} disabled={false} expanded={false} onChange={[Function: value]}>
                        <ExpansionPanelSummary classes={{...}} expandIcon={{...}} disabled={false} expanded={false} onChange={[Function: value]}>
                          <WithStyles(ButtonBase) focusRipple={false} disableRipple={true} disabled={false} component="div" aria-expanded={false} className="MuiExpansionPanelSummary-root-40" onFocusVisible={[Function: value]} onBlur={[Function: value]} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={false} disableRipple={true} disabled={false} component="div" aria-expanded={false} className="MuiExpansionPanelSummary-root-40" onFocusVisible={[Function: value]} onBlur={[Function: value]} onClick={[Function: value]} centerRipple={false} tabIndex="0" type="button">
                              <div onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-46 MuiExpansionPanelSummary-root-40" role="button" aria-expanded={false} onClick={[Function: value]}>
                                <div className="MuiExpansionPanelSummary-content-44 RSFExpandableSection-summary-6">
                                  <WithStyles(Typography) variant="subheading">
                                    <Typography classes={{...}} variant="subheading" align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                      <h3 className="MuiTypography-root-49 MuiTypography-subheading-56">
                                        Title
                                      </h3>
                                    </Typography>
                                  </WithStyles(Typography)>
                                </div>
                                <WithStyles(IconButton) disabled={false} className="MuiExpansionPanelSummary-expandIcon-45" component="div" tabIndex={-1} aria-hidden="true">
                                  <IconButton classes={{...}} disabled={false} className="MuiExpansionPanelSummary-expandIcon-45" component="div" tabIndex={-1} aria-hidden="true" color="default">
                                    <WithStyles(ButtonBase) className="MuiIconButton-root-73 MuiExpansionPanelSummary-expandIcon-45" centerRipple={true} focusRipple={true} disabled={false} component="div" tabIndex={-1} aria-hidden="true">
                                      <ButtonBase classes={{...}} className="MuiIconButton-root-73 MuiExpansionPanelSummary-expandIcon-45" centerRipple={true} focusRipple={true} disabled={false} component="div" tabIndex={-1} aria-hidden="true" disableRipple={false} type="button">
                                        <div onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex={-1} className="MuiButtonBase-root-46 MuiIconButton-root-73 MuiExpansionPanelSummary-expandIcon-45" role="button" aria-hidden="true">
                                          <span className="MuiIconButton-label-78">
                                            <pure(ExpandMore) className="RSFExpandableSection-expandIcon-8">
                                              <ExpandMore className="RSFExpandableSection-expandIcon-8">
                                                <WithStyles(SvgIcon) className="RSFExpandableSection-expandIcon-8">
                                                  <SvgIcon classes={{...}} className="RSFExpandableSection-expandIcon-8" color="inherit" viewBox="0 0 24 24">
                                                    <svg className="MuiSvgIcon-root-79 RSFExpandableSection-expandIcon-8" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true">
                                                      <g>
                                                        <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                                      </g>
                                                    </svg>
                                                  </SvgIcon>
                                                </WithStyles(SvgIcon)>
                                              </ExpandMore>
                                            </pure(ExpandMore)>
                                          </span>
                                          <WithStyles(TouchRipple) innerRef={[Function: value]} center={true}>
                                            <TouchRipple classes={{...}} center={true}>
                                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-85" childFactory={[Function: childFactory]}>
                                                <span className="MuiTouchRipple-root-85" />
                                              </TransitionGroup>
                                            </TouchRipple>
                                          </WithStyles(TouchRipple)>
                                        </div>
                                      </ButtonBase>
                                    </WithStyles(ButtonBase)>
                                  </IconButton>
                                </WithStyles(IconButton)>
                              </div>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </ExpansionPanelSummary>
                      </WithStyles(ExpansionPanelSummary)>
                      <WithStyles(Collapse) in={false} timeout="auto" aria-hidden="true">
                        <Collapse theme={{...}} classes={{...}} in={false} timeout="auto" aria-hidden="true" collapsedHeight="0px" component="div">
                          <Transition onEnter={[Function: value]} onEntered={[Function: value]} onEntering={[Function: value]} onExit={[Function: value]} onExiting={[Function: value]} addEndListener={[Function: value]} timeout={{...}} in={false} aria-hidden="true" mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onExited={[Function: noop]}>
                            <div className="MuiCollapse-container-92" style={{...}} aria-hidden="true">
                              <div className="MuiCollapse-wrapper-94">
                                <div className="MuiCollapse-wrapperInner-95">
                                  <WithStyles(ExpansionPanelDetails) classes={{...}}>
                                    <ExpansionPanelDetails classes={{...}}>
                                      <div className="MuiExpansionPanelDetails-root-96 RSFExpandableSection-details-5">
                                        Foo
                                      </div>
                                    </ExpansionPanelDetails>
                                  </WithStyles(ExpansionPanelDetails)>
                                </div>
                              </div>
                            </div>
                          </Transition>
                        </Collapse>
                      </WithStyles(Collapse)>
                    </div>
                  </Paper>
                </WithStyles(Paper)>
              </ExpansionPanel>
            </WithStyles(ExpansionPanel)>
          </ExpandableSection>
        </inject-ExpandableSection>
      </WithTheme(inject-ExpandableSection)>
    </WithStyles(WithTheme(inject-ExpandableSection))>
  </MuiThemeProvider>
</Provider>
`;

exports[`ExpandableSection should render AmpExpandableSection when amp == true 1`] = `
<Provider app={{...}}>
  <MuiThemeProvider theme={{...}}>
    <WithStyles(WithTheme(inject-ExpandableSection)) title="Title">
      <WithTheme(inject-ExpandableSection) classes={{...}} title="Title">
        <inject-ExpandableSection theme={{...}} classes={{...}} title="Title">
          <ExpandableSection theme={{...}} classes={{...}} title="Title" amp={true}>
            <WithStyles(AmpExpandableSection) ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title">
              <AmpExpandableSection classes={{...}} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title" expanded={false}>
                <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
                  <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
                    <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
                  </SideEffect(NullComponent)>
                </HelmetWrapper>
                <amp-accordion disable-session-states={true} class="MoovAmpExpandableSection-accordion-106">
                  <section className="MoovAmpExpandableSection-section-108">
                    <WithStyles(Typography) variant="subheading" component="h3" className="MoovAmpExpandableSection-title-107">
                      <Typography classes={{...}} variant="subheading" component="h3" className="MoovAmpExpandableSection-title-107" align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                        <h3 className="MuiTypography-root-113 MuiTypography-subheading-120 MoovAmpExpandableSection-title-107">
                          Title
                          <pure(ExpandMore) className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-collapse-111">
                            <ExpandMore className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-collapse-111">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-collapse-111">
                                <SvgIcon classes={{...}} className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-collapse-111" color="inherit" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-137 MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-collapse-111" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true">
                                    <g>
                                      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    </g>
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMore>
                          </pure(ExpandMore)>
                          <pure(ExpandMore) className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-expand-110">
                            <ExpandMore className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-expand-110">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-expand-110">
                                <SvgIcon classes={{...}} className="MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-expand-110" color="inherit" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-137 MoovAmpExpandableSection-toggle-109 MoovAmpExpandableSection-expand-110" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true">
                                    <g>
                                      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    </g>
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMore>
                          </pure(ExpandMore)>
                        </h3>
                      </Typography>
                    </WithStyles(Typography)>
                    <div className="MoovAmpExpandableSection-body-112">
                      Foo
                    </div>
                  </section>
                </amp-accordion>
              </AmpExpandableSection>
            </WithStyles(AmpExpandableSection)>
          </ExpandableSection>
        </inject-ExpandableSection>
      </WithTheme(inject-ExpandableSection)>
    </WithStyles(WithTheme(inject-ExpandableSection))>
  </MuiThemeProvider>
</Provider>
`;

exports[`ExpandableSection should render expanded when expanded=true 1`] = `
<Provider app={{...}}>
  <MuiThemeProvider theme={{...}}>
    <WithStyles(WithTheme(inject-ExpandableSection)) title="Title" expanded={true}>
      <WithTheme(inject-ExpandableSection) classes={{...}} title="Title" expanded={true}>
        <inject-ExpandableSection theme={{...}} classes={{...}} title="Title" expanded={true}>
          <ExpandableSection theme={{...}} classes={{...}} title="Title" expanded={true} amp={true}>
            <WithStyles(AmpExpandableSection) ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title">
              <AmpExpandableSection classes={{...}} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title" expanded={false}>
                <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
                  <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
                    <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
                  </SideEffect(NullComponent)>
                </HelmetWrapper>
                <amp-accordion disable-session-states={true} class="MoovAmpExpandableSection-accordion-152">
                  <section className="MoovAmpExpandableSection-section-154">
                    <WithStyles(Typography) variant="subheading" component="h3" className="MoovAmpExpandableSection-title-153">
                      <Typography classes={{...}} variant="subheading" component="h3" className="MoovAmpExpandableSection-title-153" align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                        <h3 className="MuiTypography-root-159 MuiTypography-subheading-166 MoovAmpExpandableSection-title-153">
                          Title
                          <pure(ExpandMore) className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-collapse-157">
                            <ExpandMore className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-collapse-157">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-collapse-157">
                                <SvgIcon classes={{...}} className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-collapse-157" color="inherit" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-183 MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-collapse-157" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true">
                                    <g>
                                      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    </g>
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMore>
                          </pure(ExpandMore)>
                          <pure(ExpandMore) className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-expand-156">
                            <ExpandMore className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-expand-156">
                              <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-expand-156">
                                <SvgIcon classes={{...}} className="MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-expand-156" color="inherit" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-183 MoovAmpExpandableSection-toggle-155 MoovAmpExpandableSection-expand-156" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true">
                                    <g>
                                      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                    </g>
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </ExpandMore>
                          </pure(ExpandMore)>
                        </h3>
                      </Typography>
                    </WithStyles(Typography)>
                    <div className="MoovAmpExpandableSection-body-158">
                      Foo
                    </div>
                  </section>
                </amp-accordion>
              </AmpExpandableSection>
            </WithStyles(AmpExpandableSection)>
          </ExpandableSection>
        </inject-ExpandableSection>
      </WithTheme(inject-ExpandableSection)>
    </WithStyles(WithTheme(inject-ExpandableSection))>
  </MuiThemeProvider>
</Provider>
`;
